--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@
         possibilities.
       </p>
 
-      <div class="subscribe">
+      {/*<div class="subscribe">
         <p>Subscribe and get updates</p>
         <div class="form">
           <input type="email" placeholder="Your@example.com" />
           <button>NOTIFY ME</button>
         </div>
-      </div>
+      </div>*/}
 
       <div class="social-icons">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
